--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npm run build:client && npm run build:server",
     "build:client": "cd client && npm run build",
     "build:server": "cd server && npm run build",
-    "dev": "concurrently 'npm:dev:clent' 'npm:dev:server'",
+    "dev": "concurrently 'npm:dev:client' 'npm:dev:server'",
     "dev:client": "cd client && npm run dev",
     "dev:server": "cd server && npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
