--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "concurrently 'npm:dev:client' 'npm:dev:server'",
     "dev:client": "cd client && npm run dev",
     "dev:server": "cd server && npm run dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\""
   },
   "repository": {
     "type": "git",
