--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "concurrently 'npm:dev:client' 'npm:dev:server'",
     "dev:client": "cd client && npm run dev",
     "dev:server": "cd server && npm run dev",
+    "start": "cd server && npm run start",
     "test": "echo \"Error: no test specified\""
   },
   "repository": {
